--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/TJPlaysNow/Downloads/spigot-1.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/TJPlaysNow/Downloads/spigot-1.11.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/TJPlaysNow/Downloads/spigot-1.10.2-R0.1-SNAPSHOT-latest.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
